--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/calendar?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Do@Brasil84
+# H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
